--- a/requirements.txt
+++ b/requirements.txt
@@ -2,81 +2,364 @@ accelerate==1.10.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
+anndata==0.12.2
 annotated-types==0.7.0
-anyio==4.11.0
+anyio==4.10.0
+AppKit==0.2.8
+appnope==0.1.4
+array-api-compat==1.12.0
+asitop==0.0.24
+asttokens==3.0.0
 attrs==25.3.0
+beautifulsoup4==4.13.5
+bitsandbytes==0.42.0
+blessed==1.22.0
 blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
-click==8.3.0
+click==8.2.1
+comm==0.2.3
+contourpy==1.3.3
+crc32c==2.7.1
+cycler==0.12.1
+dashing==0.1.0
 dataclasses-json==0.6.7
+datasets==4.1.1
+debugpy==1.8.16
+decorator==5.2.1
+diffusers==0.35.1
+dill==0.4.0
+diskcache==5.6.3
+dnspython==2.8.0
+donfig==0.8.1.post1
+ecdsa==0.19.1
 einops==0.8.1
-et_xmlfile==2.0.0
+email-validator==2.3.0
+executing==2.2.1
+fastapi==0.116.1
 filelock==3.19.1
 Flask==3.1.2
+fonttools==4.59.2
 frozenlist==1.7.0
 fsspec==2025.9.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.181.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-storage==3.3.1
+google-crc32c==1.7.1
+google-genai==1.36.0
+google-generativeai==0.8.5
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+grpcio-status==1.71.2
 h11==0.16.0
+h2==4.3.0
+h5py==3.14.0
 hf-xet==1.1.10
+hpack==4.1.0
 httpcore==1.0.9
+httplib2==0.30.0
 httpx==0.28.1
 httpx-sse==0.4.1
-huggingface-hub==0.35.2
+huggingface-hub==0.35.0
+hyperframe==6.1.0
 idna==3.10
+importlib_metadata==8.7.0
+ipykernel==6.30.1
+ipython==9.5.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_widgets==3.0.15
+kiwisolver==1.4.9
 langchain==0.3.27
 langchain-community==0.3.30
 langchain-core==0.3.76
+langchain-google-genai==2.0.4
+langchain-ollama==0.3.8
 langchain-text-splitters==0.3.11
-langsmith==0.4.31
-MarkupSafe==3.0.3
+langgraph==0.6.7
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.6.4
+langgraph-sdk==0.2.6
+langsmith==0.4.27
+legacy-api-wrap==1.4.1
+llama_cpp_python==0.3.16
+llvmlite==0.45.0
+MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib==3.10.6
+matplotlib-inline==0.1.7
 mpmath==1.3.0
 multidict==6.6.4
+multiprocess==0.70.16
 mypy_extensions==1.1.0
+natsort==8.4.0
+nest-asyncio==1.6.0
 networkx==3.5
-numpy==2.3.3
-openpyxl==3.1.5
+numba==0.62.0
+numcodecs==0.16.3
+numpy==2.2.6
+ollama==0.6.0
+opencv-python==4.12.0.88
 orjson==3.11.3
+ormsgpack==1.10.0
 packaging==25.0
 pandas==2.3.2
+parso==0.8.5
+patsy==1.0.1
+pdf2image==1.17.0
+peft==0.17.1
+pexpect==4.9.0
 pillow==11.3.0
+platformdirs==4.4.0
+priority==2.0.0
+prompt_toolkit==3.0.52
 propcache==0.3.2
-psutil==7.1.0
-pydantic==2.11.9
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycairo==1.28.0
+pydantic==2.11.7
 pydantic-settings==2.11.0
 pydantic_core==2.33.2
+Pygments==2.19.2
+PyGObject==3.54.2
+pymongo==4.14.1
+pynndescent==0.5.13
+pyobjc==11.1
+pyobjc-core==11.1
+pyobjc-framework-Accessibility==11.1
+pyobjc-framework-Accounts==11.1
+pyobjc-framework-AddressBook==11.1
+pyobjc-framework-AdServices==11.1
+pyobjc-framework-AdSupport==11.1
+pyobjc-framework-AppleScriptKit==11.1
+pyobjc-framework-AppleScriptObjC==11.1
+pyobjc-framework-ApplicationServices==11.1
+pyobjc-framework-AppTrackingTransparency==11.1
+pyobjc-framework-AudioVideoBridging==11.1
+pyobjc-framework-AuthenticationServices==11.1
+pyobjc-framework-AutomaticAssessmentConfiguration==11.1
+pyobjc-framework-Automator==11.1
+pyobjc-framework-AVFoundation==11.1
+pyobjc-framework-AVKit==11.1
+pyobjc-framework-AVRouting==11.1
+pyobjc-framework-BackgroundAssets==11.1
+pyobjc-framework-BrowserEngineKit==11.1
+pyobjc-framework-BusinessChat==11.1
+pyobjc-framework-CalendarStore==11.1
+pyobjc-framework-CallKit==11.1
+pyobjc-framework-Carbon==11.1
+pyobjc-framework-CFNetwork==11.1
+pyobjc-framework-Cinematic==11.1
+pyobjc-framework-ClassKit==11.1
+pyobjc-framework-CloudKit==11.1
+pyobjc-framework-Cocoa==11.1
+pyobjc-framework-Collaboration==11.1
+pyobjc-framework-ColorSync==11.1
+pyobjc-framework-Contacts==11.1
+pyobjc-framework-ContactsUI==11.1
+pyobjc-framework-CoreAudio==11.1
+pyobjc-framework-CoreAudioKit==11.1
+pyobjc-framework-CoreBluetooth==11.1
+pyobjc-framework-CoreData==11.1
+pyobjc-framework-CoreHaptics==11.1
+pyobjc-framework-CoreLocation==11.1
+pyobjc-framework-CoreMedia==11.1
+pyobjc-framework-CoreMediaIO==11.1
+pyobjc-framework-CoreMIDI==11.1
+pyobjc-framework-CoreML==11.1
+pyobjc-framework-CoreMotion==11.1
+pyobjc-framework-CoreServices==11.1
+pyobjc-framework-CoreSpotlight==11.1
+pyobjc-framework-CoreText==11.1
+pyobjc-framework-CoreWLAN==11.1
+pyobjc-framework-CryptoTokenKit==11.1
+pyobjc-framework-DataDetection==11.1
+pyobjc-framework-DeviceCheck==11.1
+pyobjc-framework-DeviceDiscoveryExtension==11.1
+pyobjc-framework-DictionaryServices==11.1
+pyobjc-framework-DiscRecording==11.1
+pyobjc-framework-DiscRecordingUI==11.1
+pyobjc-framework-DiskArbitration==11.1
+pyobjc-framework-DVDPlayback==11.1
+pyobjc-framework-EventKit==11.1
+pyobjc-framework-ExceptionHandling==11.1
+pyobjc-framework-ExecutionPolicy==11.1
+pyobjc-framework-ExtensionKit==11.1
+pyobjc-framework-ExternalAccessory==11.1
+pyobjc-framework-FileProvider==11.1
+pyobjc-framework-FileProviderUI==11.1
+pyobjc-framework-FinderSync==11.1
+pyobjc-framework-FSEvents==11.1
+pyobjc-framework-FSKit==11.1
+pyobjc-framework-GameCenter==11.1
+pyobjc-framework-GameController==11.1
+pyobjc-framework-GameKit==11.1
+pyobjc-framework-GameplayKit==11.1
+pyobjc-framework-HealthKit==11.1
+pyobjc-framework-ImageCaptureCore==11.1
+pyobjc-framework-InputMethodKit==11.1
+pyobjc-framework-InstallerPlugins==11.1
+pyobjc-framework-InstantMessage==11.1
+pyobjc-framework-Intents==11.1
+pyobjc-framework-IntentsUI==11.1
+pyobjc-framework-IOBluetooth==11.1
+pyobjc-framework-IOBluetoothUI==11.1
+pyobjc-framework-IOSurface==11.1
+pyobjc-framework-iTunesLibrary==11.1
+pyobjc-framework-KernelManagement==11.1
+pyobjc-framework-LatentSemanticMapping==11.1
+pyobjc-framework-LaunchServices==11.1
+pyobjc-framework-libdispatch==11.1
+pyobjc-framework-libxpc==11.1
+pyobjc-framework-LinkPresentation==11.1
+pyobjc-framework-LocalAuthentication==11.1
+pyobjc-framework-LocalAuthenticationEmbeddedUI==11.1
+pyobjc-framework-MailKit==11.1
+pyobjc-framework-MapKit==11.1
+pyobjc-framework-MediaAccessibility==11.1
+pyobjc-framework-MediaExtension==11.1
+pyobjc-framework-MediaLibrary==11.1
+pyobjc-framework-MediaPlayer==11.1
+pyobjc-framework-MediaToolbox==11.1
+pyobjc-framework-Metal==11.1
+pyobjc-framework-MetalFX==11.1
+pyobjc-framework-MetalKit==11.1
+pyobjc-framework-MetalPerformanceShaders==11.1
+pyobjc-framework-MetalPerformanceShadersGraph==11.1
+pyobjc-framework-MetricKit==11.1
+pyobjc-framework-MLCompute==11.1
+pyobjc-framework-ModelIO==11.1
+pyobjc-framework-MultipeerConnectivity==11.1
+pyobjc-framework-NaturalLanguage==11.1
+pyobjc-framework-NetFS==11.1
+pyobjc-framework-Network==11.1
+pyobjc-framework-NetworkExtension==11.1
+pyobjc-framework-NotificationCenter==11.1
+pyobjc-framework-OpenDirectory==11.1
+pyobjc-framework-OSAKit==11.1
+pyobjc-framework-OSLog==11.1
+pyobjc-framework-PassKit==11.1
+pyobjc-framework-PencilKit==11.1
+pyobjc-framework-PHASE==11.1
+pyobjc-framework-Photos==11.1
+pyobjc-framework-PhotosUI==11.1
+pyobjc-framework-PreferencePanes==11.1
+pyobjc-framework-PushKit==11.1
+pyobjc-framework-Quartz==11.1
+pyobjc-framework-QuickLookThumbnailing==11.1
+pyobjc-framework-ReplayKit==11.1
+pyobjc-framework-SafariServices==11.1
+pyobjc-framework-SafetyKit==11.1
+pyobjc-framework-SceneKit==11.1
+pyobjc-framework-ScreenCaptureKit==11.1
+pyobjc-framework-ScreenSaver==11.1
+pyobjc-framework-ScreenTime==11.1
+pyobjc-framework-ScriptingBridge==11.1
+pyobjc-framework-SearchKit==11.1
+pyobjc-framework-Security==11.1
+pyobjc-framework-SecurityFoundation==11.1
+pyobjc-framework-SecurityInterface==11.1
+pyobjc-framework-SecurityUI==11.1
+pyobjc-framework-SensitiveContentAnalysis==11.1
+pyobjc-framework-ServiceManagement==11.1
+pyobjc-framework-SharedWithYou==11.1
+pyobjc-framework-SharedWithYouCore==11.1
+pyobjc-framework-ShazamKit==11.1
+pyobjc-framework-Social==11.1
+pyobjc-framework-SoundAnalysis==11.1
+pyobjc-framework-Speech==11.1
+pyobjc-framework-SpriteKit==11.1
+pyobjc-framework-StoreKit==11.1
+pyobjc-framework-Symbols==11.1
+pyobjc-framework-SyncServices==11.1
+pyobjc-framework-SystemConfiguration==11.1
+pyobjc-framework-SystemExtensions==11.1
+pyobjc-framework-ThreadNetwork==11.1
+pyobjc-framework-UniformTypeIdentifiers==11.1
+pyobjc-framework-UserNotifications==11.1
+pyobjc-framework-UserNotificationsUI==11.1
+pyobjc-framework-VideoSubscriberAccount==11.1
+pyobjc-framework-VideoToolbox==11.1
+pyobjc-framework-Virtualization==11.1
+pyobjc-framework-Vision==11.1
+pyobjc-framework-WebKit==11.1
+pyparsing==3.2.3
 pypdf==6.1.1
+PyPDF2==3.0.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
 pytz==2025.2
-PyYAML==6.0.3
+PyYAML==6.0.2
+pyzmq==27.1.0
+razorpay==1.4.2
 regex==2025.9.18
 requests==2.32.5
 requests-toolbelt==1.0.0
+rsa==4.9.1
 safetensors==0.6.2
+scanpy==1.11.4
+schemdraw==0.21
 scikit-learn==1.7.2
 scipy==1.16.2
+seaborn==0.13.2
 sentence-transformers==5.1.1
+session-info2==0.2.2
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.43
+stack-data==0.6.3
+starlette==0.47.3
+statsmodels==0.14.5
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.22.1
 torch==2.8.0
+torchvision==0.23.0
+tornado==6.5.2
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.56.2
+trl==0.23.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
+umap-learn==0.5.9.post2
+uritemplate==4.2.0
 urllib3==2.5.0
+uv==0.8.22
+wcwidth==0.2.13
+websockets==15.0.1
 Werkzeug==3.1.3
+widgetsnbextension==4.0.14
+wsproto==1.2.0
+xxhash==3.5.0
 yarl==1.20.1
-zstandard==0.25.0
+zarr==3.1.3
+zipp==3.23.0
+zstandard==0.24.0
