--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.74.0
 grpcio-status==1.71.2
+gunicorn==23.0.0
 h11==0.16.0
 h2==4.3.0
 h5py==3.14.0
